force-app/main/default/objects/Lead/fields/UtmMedium__c.field-meta.xml
<CustomField>
    <fullName>UtmMedium__c</fullName>
    <label>Utm Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cpc</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>social</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>banner</fullName>
            </value>
            <value>
                <fullName>print</fullName>
            </value>
            <value>
                <fullName>offline</fullName>
            </value>
            <value>
                <fullName>gmail</fullName>
            </value>
            <value>
                <fullName>youtube</fullName>
            </value>
            <value>
                <fullName>outbrain</fullName>
            </value>
            <value>
                <fullName>nom-de-la-regie</fullName>
            </value>
            <value>
                <fullName>webself</fullName>
            </value>
            <value>
                <fullName>ligatus</fullName>
            </value>
            <value>
                <fullName>sesame</fullName>
            </value>
            <value>
                <fullName>salon-entrepreneur-19</fullName>
            </value>
            <value>
                <fullName>qonto</fullName>
            </value>
            <value>
                <fullName>LiveMentor</fullName>
            </value>
            <value>
                <fullName>Normandie Incubation</fullName>
            </value>
            <value>
                <fullName>taboola</fullName>
            </value>
            <value>
                <fullName>twitter</fullName>
            </value>
            <value>
                <fullName>form-sidebar-crea</fullName>
            </value>
            <value>
                <fullName>LP-Bilan-Rattrapage</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>