force-app/main/default/objects/Lead/fields/UtmOriginalSource__c.field-meta.xml
<CustomField>
    <fullName>UtmOriginalSource__c</fullName>
    <label>Utm Original source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>