force-app/main/default/objects/Lead/fields/UtmSource__c.field-meta.xml
<CustomField>
    <fullName>UtmSource__c</fullName>
    <label>Utm_source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>