force-app/main/default/objects/Lead/fields/UtmTerm__c.field-meta.xml
<CustomField>
    <fullName>UtmTerm__c</fullName>
    <label>Utm Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>