force-app/main/default/objects/Lead/fields/YearOfCreate__c.field-meta.xml
<CustomField>
    <fullName>YearOfCreate__c</fullName>
    <label>Année de Création</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>