force-app/main/default/objects/Lead/recordTypes/LeadClient.recordType-meta.xml
<RecordType>
    <fullName>LeadClient</fullName>
    <active>true</active>
    <businessProcess>Processus start</businessProcess>
    <label>Lead Client</label>
</RecordType>