force-app/main/default/objects/Lead/recordTypes/LeadPartenaireEC.recordType-meta.xml
<RecordType>
    <fullName>LeadPartenaireEC</fullName>
    <active>true</active>
    <businessProcess>Processus EC Partenaire</businessProcess>
    <label>Lead EC Partenaire</label>
</RecordType>