force-app/main/default/objects/Lead/recordTypes/Partenariat.recordType-meta.xml
<RecordType>
    <fullName>Partenariat</fullName>
    <active>true</active>
    <businessProcess>Processus Partenariat</businessProcess>
    <label>Partenariat</label>
</RecordType>