force-app/main/default/objects/Lead/validationRules/ActiviteObligatoireSPE.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiviteObligatoireSPE</fullName>
    <active>false</active>
    <description>Le champs activité est obligatoire lors de la qualification pour les leads SPE</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
RecordType.DeveloperName=&quot;Lead_SPE&quot;, 
ISPICKVAL(Activity__c,&quot;&quot;),
NOT(ISPICKVAL(Status,&quot;Call 1&quot;)),
NOT(ISPICKVAL(Status,&quot;Perdu&quot;)),
NOT(ISPICKVAL( TypeOfNeed__c,&quot;&quot; ))
)</errorConditionFormula>
    <errorMessage>Le champs activité doit être rempli lors de la qualification.</errorMessage>
</ValidationRule>