force-app/main/default/objects/Lead/validationRules/Blockconverti.validationRule-meta.xml
<ValidationRule>
    <fullName>Blockconverti</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Converti&quot;) &amp;&amp; RecordType.DeveloperName = &quot;LeadClient&quot;</errorConditionFormula>
    <errorMessage>Impossible de convertir la lead</errorMessage>
</ValidationRule>