force-app/main/default/objects/Lead/validationRules/BrandingObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>BrandingObligatoire</fullName>
    <active>true</active>
    <description>Champ branding nécessaire si statutlead passe sur une étape qui envoie un mail/sms</description>
    <errorConditionFormula>AND(
  $User.BypassValidationRules__c = false,
  ISPICKVAL(Branding__c   , &quot;&quot;),
  RecordType.DeveloperName  = &quot;LeadClient&quot;,
  OR(
    ISPICKVAL(Status, &quot;Call 3&quot;),
    ISPICKVAL(Status, &quot;Call 4&quot;),
    ISPICKVAL(Status, &quot;Perdu&quot;),
    ISPICKVAL(Status, &quot;Transfert&quot;),
    ISPICKVAL(Status, &quot;Converti&quot;),
    ISCHANGED(Is_Appointment_Set__c)
  )
)</errorConditionFormula>
    <errorDisplayField>Branding__c</errorDisplayField>
    <errorMessage>Ce champ doit être rempli pour passer à cette étape</errorMessage>
</ValidationRule>