force-app/main/default/objects/Lead/validationRules/Check_leadsource_detailpayant.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_leadsource_detailpayant</fullName>
    <active>false</active>
    <description>Si la catégorie de source est bien &quot;payante&quot;, merci de renseigner le détail de la source payante</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
(ISPICKVAL( LeadSource , &quot;Payant&quot;)  &amp;&amp;
ISPICKVAL( SourceDetails__c, &quot;&quot; ))
)</errorConditionFormula>
    <errorDisplayField>SourceDetails__c</errorDisplayField>
    <errorMessage>Si la catégorie de source est bien &quot;payante&quot;, merci de renseigner le détail de la source payante</errorMessage>
</ValidationRule>