force-app/main/default/objects/Lead/validationRules/checkEmailEtTelehone.validationRule-meta.xml
<ValidationRule>
    <fullName>checkEmailEtTelehone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
ISBLANK(  MobilePhone ),isblank( Email )
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner au moins le numéro de téléphone ou l&#39;adresse email</errorMessage>
</ValidationRule>