force-app/main/default/objects/Lead/validationRules/checkLeadsourceDetailpayantV2.validationRule-meta.xml
<ValidationRule>
    <fullName>checkLeadsourceDetailpayantV2</fullName>
    <active>true</active>
    <description>Si la catégorie de source est bien &quot;payante&quot;, merci de renseigner le détail de la source payante</description>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
ISPICKVAL( LeadSource , &quot;Payant&quot;),
ISPICKVAL( SourceDetails__c, &quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>SourceDetails__c</errorDisplayField>
    <errorMessage>Si la catégorie de source est bien &quot;payante&quot;, merci de renseigner le détail de la source payante</errorMessage>
</ValidationRule>