force-app/main/default/objects/Lead/validationRules/Events.validationRule-meta.xml
<ValidationRule>
    <fullName>Events</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$User.BypassValidationRules__c = false,
        		ISPICKVAL( Canal__c,  &quot;Events&quot;),
        		ISBLANK(Event__c )
        	)</errorConditionFormula>
    <errorDisplayField>Event__c</errorDisplayField>
    <errorMessage>Il faut associer l&#39;enregistrement à un event</errorMessage>
</ValidationRule>