force-app/main/default/objects/Lead/validationRules/Partenaireatrouver.validationRule-meta.xml
<ValidationRule>
    <fullName>Partenaireatrouver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $User.BypassValidationRules__c  = false,
  ISPICKVAL(Status, &quot;EC à Trouver&quot;),
  ISBLANK(City ))</errorConditionFormula>
    <errorMessage>Il faut renseigner la ville pour pouvoir faciliter la recherche du partenaire</errorMessage>
</ValidationRule>