force-app/main/default/objects/Lead/validationRules/partenariat.validationRule-meta.xml
<ValidationRule>
    <fullName>partenariat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$User.BypassValidationRules__c = false,
        		ISPICKVAL( Canal__c, &quot;Partenariat&quot;),
        		ISBLANK( Partnership__c )
        	)</errorConditionFormula>
    <errorDisplayField>Partnership__c</errorDisplayField>
    <errorMessage>Il est indispensable d&#39;associer l&#39;enregistrement à un partenariat</errorMessage>
</ValidationRule>