force-app/main/default/objects/Lead/validationRules/Reco_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Reco_Client</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				$User.BypassValidationRules__c = false,
        		ISPICKVAL( Canal__c, &quot;Reco client&quot;),
        		ISBLANK(CustomerRecommendation__c)
        	)</errorConditionFormula>
    <errorMessage>Ceci est une reco client merci de saisir le nom du client dans le champs Recommandation client</errorMessage>
</ValidationRule>