force-app/main/default/objects/Lead/validationRules/statutDeLaLeadEtMotifDeLaPerte.validationRule-meta.xml
<ValidationRule>
    <fullName>statutDeLaLeadEtMotifDeLaPerte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
ISPICKVAL(Status,&quot;Perdu&quot;),
ISPICKVAL( LossReason__c, &quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>LossReason__c</errorDisplayField>
    <errorMessage>Le motif de la perte est obligatoire si le statut est Non-qualifié</errorMessage>
</ValidationRule>