force-app/main/default/objects/Lead/validationRules/TransfertPartenaireSansPartenaire.validationRule-meta.xml
<ValidationRule>
    <fullName>TransfertPartenaireSansPartenaire</fullName>
    <active>true</active>
    <description>Il est obligatoire de renseigner le compte et le contact partenaires pour passer le statut en &quot;Transfert&quot;  et le suivi de transfert en &quot;Partenaire&quot;.</description>
    <errorConditionFormula>AND(
  NOT($User.BypassValidationRules__c),
  OR(
    ISBLANK( Contact_Partenaire__c ),
    ISBLANK( Partenaire__c )
  ),
  ISPICKVAL( Status , &quot;Partenaire&quot;),
  ISPICKVAL( TransferMonitoring__c , &quot;Partenaire&quot;)
)</errorConditionFormula>
    <errorMessage>Il est obligatoire de renseigner le compte et le contact partenaires pour passer le statut en &quot;Transfert Partenaire&quot;.</errorMessage>
</ValidationRule>