force-app/main/default/objects/Lead/listViews/attente.listView-meta.xml
<ListView>
    <fullName>attente</fullName>
    <booleanFilter>((1 AND 5) OR 2) AND 3 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Partenaire__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TransferMonitoring__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>EC à Trouver</value>
    </filters>
    <filters>
        <field>Partenaire__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.LeadClient,Lead.Partenariat</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Partenaire,Transfert</value>
    </filters>
    <label>EC à trouver</label>
</ListView>