force-app/main/default/objects/Lead/listViews/Leads_en_attente_Call_2_et_Lead.listView-meta.xml
<ListView>
    <fullName>Leads_en_attente_Call_2_et_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>NextCallDate__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>OrigineWebsite__c</columns>
    <columns>Source__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>NextCallDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Call 2,Call 3,Call 4,Call 5,Call 6,Call 7</value>
    </filters>
    <filters>
        <field>CallBackDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>Leads en attente Call 2 et +</label>
    <queue>Leads_en_attente_Call_2_et</queue>
</ListView>