force-app/main/default/objects/Lead/listViews/Leads_SPE_En_Cours.listView-meta.xml
<ListView>
    <fullName>Leads_SPE_En_Cours</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Partnership__c</columns>
    <columns>ContactPartenariat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Partenariat</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Call 1,Call 2,Call 3,EC à Trouver</value>
    </filters>
    <label>Leads Partenariats en cours</label>
    <sharedTo>
        <group>SPE</group>
    </sharedTo>
</ListView>